--- a/budweiser.html
+++ b/budweiser.html
@@ -63,7 +63,7 @@
     <p class="product-price">$5.00</p>
 </div>
 
-<a href="index.html" class="back-button">Back to Inventory</a>
+<a href="https://krishnasubedi1998.github.io/#inventory" class="back-button">Back to Inventory</a>
 
 </body>
 </html>
