--- a/index.html
+++ b/index.html
@@ -7,376 +7,149 @@
     <title>349 Liquors</title>
     <!-- Importing Google Fonts (Lobster for store name and Open Sans for About Us) -->
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            margin: 0;
-            padding: 0;
-        }
-
-        /* Header Style */
-        header {
-            background-color: #333;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            flex-wrap: wrap;
-        }
-
-        header h1 {
-            font-family: 'Lobster', cursive;
-            font-size: 40px;
-            margin: 0;
-            text-align: left;
-        }
-
-        .nav {
-            display: flex;
-            flex-wrap: wrap;
-        }
-
-        .nav a {
-            color: white;
-            padding: 14px 20px;
-            font-size: 20px;
-            text-decoration: none;
-            margin: 0 15px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        .nav a:hover {
-            background-color: #9c5c55; /* Light maroon */
-        }
-
-        .contact-button {
-            background-color: #9c5c55;
-            color: white;
-            padding: 10px 20px;
-            font-size: 18px;
-            font-weight: bold;
-            border-radius: 25px;
-            cursor: pointer;
-            text-decoration: none;
-            transition: background-color 0.3s;
-        }
-
-        .contact-button:hover {
-            background-color: #7f4a3d;
-        }
-
-        /* Image container style */
-        .image-container {
-            position: relative;
-            text-align: center;
-            margin: 0;
-        }
-
-        .image-container img {
-            width: 100%; /* Display the full image width */
-            height: auto; /* Maintain aspect ratio */
-        }
-
-        /* Store Name */
-        .store-name {
-            position: absolute;
-            top: 25%; /* Moved slightly down */
-            right: 5%; /* Left-aligned */
-            transform: translateX(0);
-            color: red;
-            font-size: 60px;
-            font-family: 'Lobster', cursive; /* Using Lobster font */
-            font-weight: bold;
-            text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.6);
-        }
-
-        /* Tagline */
-        .tagline {
-            position: absolute;
-            top: 35%; /* Moved slightly down from the store name */
-            right: 5%; /* Left-aligned */
-            transform: translateX(0);
-            color: white;
-            font-size: 24px;
-            font-family: Arial, sans-serif;
-            font-weight: normal;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
-        }
-
-        /* View Inventory Button */
-        .button-container {
-            position: absolute;
-            top: 45%; /* Adjusted to match the position below the tagline */
-            right: 5%;
-            transform: translateX(0);
-            margin-top: 20px;
-        }
-
-        .button {
-            background-color: #9c5c55; /* Yellowish light maroon color */
-            color: white;
-            padding: 20px 40px;
-            font-size: 26px;
-            font-weight: bold;
-            cursor: pointer;
-            border: none;
-            border-radius: 50px; /* Rounded edges */
-            text-decoration: none;
-            transition: background-color 0.3s, transform 0.3s;
-        }
-
-        .button:hover {
-            background-color: #7f4a3d; /* Darker shade for hover effect */
-            transform: scale(1.1); /* Slightly enlarge the button */
-        }
-
-        /* About Section */
-        #about {
-            background-color: #f4f4f4;
-            padding: 40px 20px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            flex-wrap: wrap;
-        }
-
-        #about h2 {
-            font-size: 30px;
-            color: #333;
-            font-family: 'Open Sans', sans-serif;
-            font-weight: 600;
-            width: 60%;
-        }
-
-        #about p {
-            font-size: 18px;
-            color: #555;
-            font-family: 'Open Sans', sans-serif;
-            font-weight: 400;
-        }
-
-        #about img {
-            width: 250px;
-            height: auto;
-            border-radius: 10px;
-        }
-
-        /* Inventory Section */
-        .content {
-            padding: 20px;
-        }
-
-        .inventory {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-        }
-
-        .category {
-            width: 30%;
-            margin-bottom: 20px;
-        }
-
-        .category h2 {
-            text-align: right;
-            color: #333;
-            font-size: 24px;
-            position: relative;
-        }
-
-        .category ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .category li {
-            background-color: #fff;
-            margin: 5px 0;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-
-        .category li:hover {
-            background-color: #f0f0f0;
-            cursor: pointer;
-        }
-
-        /* Bottom Contact Us Section */
-        .contact-bottom {
-            background-color: #333;
-            color: white;
-            padding: 15px;
-            text-align: center;
-        }
-
-        /* Responsive adjustments */
-        @media (max-width: 768px) {
-            /* Header */
-            header h1 {
-                font-size: 30px;
-            }
-
-            .nav {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .nav a {
-                font-size: 18px;
-                padding: 12px 18px;
-                margin: 5px;
-            }
-
-            /* Image container */
-            .store-name {
-                font-size: 40px;
-                top: 20%;
-            }
-
-            .tagline {
-                font-size: 20px;
-                top: 30%;
-            }
-
-            .button {
-                font-size: 20px;
-                padding: 15px 30px;
-            }
-
-            /* About Section */
-            #about {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            #about h2 {
-                font-size: 24px;
-                width: 100%;
-                text-align: center;
-            }
-
-            #about p {
-                font-size: 16px;
-                text-align: center;
-            }
-
-            #about img {
-                width: 100%;
-                height: auto;
-            }
-
-            /* Inventory Section */
-            .category {
-                width: 100%;
-                margin-bottom: 20px;
-            }
-
-            .category h2 {
-                font-size: 22px;
-                text-align: center;
-            }
-
-            .category ul {
-                padding: 0;
-                text-align: center;
-            }
-
-            /* Contact Section */
-            .contact-bottom {
-                padding: 30px;
-            }
-
-            .contact-form, .contact-info {
-                width: 100%;
-                padding: 20px;
-                margin-bottom: 20px;
-            }
-
-            /* Contact Info */
-            .contact-info {
-                margin-left: 0;
-            }
-        }
-
-    </style>
+    <!-- Link to External CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-
-<!-- Header with navigation buttons and contact button on the right -->
-<header>
-    <div>
-        <h1>349 Liquors</h1>
-    </div>
-    <div class="nav">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#inventory">Product</a>
-    </div>
-    <a href="#contact" class="contact-button">Order Online</a>
-</header>
-
-<!-- Place the image container with the store name, tagline, and button on the image -->
-<div class="image-container" id="home">
-    <img src="3492.png" alt="349 Liquors">
-    <div class="store-name">349 Liquors</div>
-    <div class="tagline">Explore the best liquors and order online</div>
-    <div class="button-container">
-        <a href="#inventory" class="button">View Inventory</a>
-    </div>
-</div>
-
-<!-- About Section (Now at the top of the second page) -->
-<div id="about" class="content">
-    <h2>About Us</h2>
-    <div>
-        <p>349 Liquors is family owned bussiness been serving the community for several years, offering the best selection of spirits, beer, and wine from the U.S. and around the world. Our goal is to provide the best product for our customers.</p>
-    </div>
-</div>
-
-<!-- Inventory Section -->
-<div id="inventory" class="content">
-    <h2>Our Products</h2>
-    <div class="inventory">
-        <div class="category">
-            <h2>Whiskey</h2>
-            <ul>
-                <li>Jack Daniels</li>
-                <li>Glenfiddich</li>
-                <li>Jameson</li>
-            </ul>
+    <!-- Header with navigation buttons and contact button on the right -->
+    <header>
+        <div>
+            <h1>349 Liquors</h1>
         </div>
-        <div class="category">
-            <h2>Wine</h2>
-            <ul>
-                <li>Cabernet Sauvignon</li>
-                <li>Chardonnay</li>
-                <li>Merlot</li>
-            </ul>
+        <div class="nav">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#inventory">Product</a>
         </div>
-        <div class="category">
-            <h2>Beer</h2>
-            <ul>
-                <li>Corona</li>
-                <li>Budweiser</li>
-                <li>Heineken</li>
-            </ul>
+        <a href="#contact" class="contact-button">Order Online</a>
+        <!-- Take me there link -->
+        <a href="https://www.google.com/maps/dir//349+Liquor+Beer+%26+Wine-+E+Cig+and+Vape+Store,+1001-1201+W+CR-137,+Midland,+TX+79706/@31.9323208,-102.0641593,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x86f97d660bc1cbdb:0xfad36406067807e!2m2!1d-102.0615844!2d31.9323163?entry=ttu&g_ep=EgoyMDI1MDIyNi4xIKXMDSoJLDEwMjExNDUzSAFQAw%3D%3D" class="takemethere-button" target="_blank">Take Me There</a>
+    </header>
+
+    <!-- Place the image container with the store name, tagline, and button on the image -->
+    <div class="image-container" id="home">
+        <img src="3492.png" alt="349 Liquors">
+        <div class="store-name">349 Liquors</div>
+        <div class="tagline">Explore the best liquors and order online</div>
+        <div class="button-container">
+            <a href="#inventory" class="button">View Inventory</a>
         </div>
     </div>
-</div>
 
-<!-- Contact Info Section at the bottom -->
-<div class="contact-bottom" id="contact">
-    <h3>Contact Us</h3>
-    <p>Email: contact@349liquors.com</p>
-    <p>Phone: (123) 456-7890</p>
-</div>
+    <!-- About Section (Now at the top of the second page) -->
+    <div id="about" class="content">
+        <h2>About Us</h2>
+        <div>
+            <p>349 Liquors is a family-owned business that has been serving the community for several years, offering the best selection of spirits, beer, and wine from the U.S. and Mexico. We are dedicated to bringing our customers the finest products at great prices, with the added convenience of ordering online and having your favorite liquors delivered right to your door. We plan on adding some Nepalese spirits in the future. Greetings from Jhyap solti on the left here. Appreciate your business, MOFOs!</p>
+        </div>
+        <div>
+            <img src="3493.png" alt="349 Liquors" />
+        </div>
+    </div>
 
+    <!-- Inventory section -->
+    <div id="inventory" class="content">
+        <h2>Our Inventory</h2>
+        <div class="inventory">
+            <!-- US Beers -->
+            <div class="category">
+                <h2>US Beers</h2>
+                <ul>
+                    <li class="budweiser">
+                        <a href="budweiser.html">Budweiser</a>
+                    </li>
+                    <li>Coors Light</li>
+                    <li>Michelob Ultra</li>
+                    <li>Sam Adams Boston Lager</li>
+                    <li>Sierra Nevada Pale Ale</li>
+                </ul>
+            </div>
+
+            <!-- Mexican Beers -->
+            <div class="category">
+                <h2>Mexican Beers</h2>
+                <ul>
+                    <li>Corona Extra</li>
+                    <li>Modelo Especial</li>
+                    <li>Pacifico</li>
+                    <li>Negra Modelo</li>
+                    <li>Dos Equis</li>
+                </ul>
+            </div>
+
+            <!-- Whiskeys -->
+            <div class="category">
+                <h2 class="whiskeys">Whiskeys</h2>
+                <ul>
+                    <li>Jack Daniel's</li>
+                    <li>Jameson Irish Whiskey</li>
+                    <li>Buffalo Trace</li>
+                    <li>Maker's Mark</li>
+                    <li>Glenfiddich Single Malt Scotch</li>
+                </ul>
+            </div>
+
+            <!-- Rums -->
+            <div class="category">
+                <h2>Rums</h2>
+                <ul>
+                    <li>Bacardi Superior</li>
+                    <li>Captain Morgan Spiced Rum</li>
+                    <li>Malibu Coconut Rum</li>
+                    <li>Mount Gay Eclipse Rum</li>
+                    <li>Don Q Cristal Rum</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <!-- Contact Information (Bottom Section) -->
+    <div id="contact" class="contact-bottom" style="display: flex; justify-content: space-between; align-items: center; background: linear-gradient(135deg, #6e4b3a, #3a5a6d); padding: 40px 20px; border-radius: 8px;">
+        <!-- Contact Form on the Left -->
+        <div class="contact-form" style="flex: 1; padding: 20px; color: white; margin-right: 20px;">
+            <h3>Send us a Message</h3>
+            <form action="#" method="POST">
+                <div>
+                    <label for="name" style="color: white;">Name:</label><br>
+                    <input type="text" id="name" name="name" required style="padding: 8px; width: 60%; border-radius: 5px; border: 1px solid #ddd; margin-bottom: 10px;">
+                </div>
+                <div>
+                    <label for="email" style="color: white;">Email:</label><br>
+                    <input type="email" id="email" name="email" required style="padding: 8px; width: 60%; border-radius: 5px; border: 1px solid #ddd; margin-bottom: 10px;">
+                </div>
+                <div>
+                    <label for="message" style="color: white;">Message:</label><br>
+                    <textarea id="message" name="message" required rows="4" style="padding: 8px; width: 100%; border-radius: 5px; border: 1px solid #ddd; margin-bottom: 10px;"></textarea>
+                </div>
+                <div>
+                    <button type="submit" style="background-color: #9c5c55; color: white; padding: 12px 25px; font-size: 18px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">
+                        Submit
+                    </button>
+                </div>
+            </form>
+        </div>
+
+        <!-- Contact Info on the Right -->
+        <div style="flex: 1; padding: 20px; color: white;">
+            <h2>Contact Us</h2>
+            <p>Phone: calling ....</p>
+            <p>Email: <a href="mailto:349@gmail.com" style="color: white; text-decoration: underline;">349@gmail.com</a></p>
+
+            <!-- Order Links Section -->
+            <h3>Order Online:</h3>
+            <div style="display: flex; gap: 15px; flex-wrap: wrap;">
+                <!-- DoorDash Link (moved slightly to the right) -->
+                <a href="https://www.doordash.com/convenience/store/28989806" target="_blank" style="background-color: #E74C3C; color: white; padding: 10px 20px; font-size: 18px; border-radius: 5px; text-decoration: none; text-align: center; transition: background-color 0.3s; margin-left: 120px;">
+                    Order via DoorDash
+                </a>
+
+                <!-- Uber Eats Link (moved slightly to the right, yellowish) -->
+                <a href="https://www.ubereats.com/store/349-liquor-beer-%26-wine-e-cig-and-vape-store/98HQTEKQVnOqIfQ8Yh02qQ/f7c1d04c-4290-5673-aa21-f43c621d36a9/80c7dccb-ce5b-488d-9ae7-2a3477b81964?diningMode=DELIVERY&ps=1&scats=80c7dccb-ce5b-488d-9ae7-2a3477b81964&scatsectypes=COLLECTION&scatsubs=" target="_blank" style="background-color: #F1C40F; color: white; padding: 10px 20px; font-size: 18px; border-radius: 5px; text-decoration: none; text-align: center; transition: background-color 0.3s; margin-left: 20px;">
+                    Order via Uber Eats
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
